metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/FDConnect__Fd_Ticket__c.object-meta.xml
<CustomObject>
    <label>Freshdesk Ticket</label>
    <nameField>
        <displayFormat>FD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freshdesk Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>