metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Agent__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Agent__c</fullName>
    <label>Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>