metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Fd_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>