metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Creation_Time__c</fullName>
    <label>Creation Time</label>
    <type>DateTime</type>
</CustomField>