metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Due_date__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Due_date__c</fullName>
    <label>Due date</label>
    <type>DateTime</type>
</CustomField>