metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Is_Overdue__c</fullName>
    <formula>AND((FDConnect__Last_Responded_Time__c &gt;FDConnect__Due_date__c) , (FDConnect__Ticket_Status__c!=&quot;Resolved&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>