metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Last_Responded_Time__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Last_Responded_Time__c</fullName>
    <label>Last Responded Time</label>
    <type>DateTime</type>
</CustomField>