metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Source__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Source__c</fullName>
    <label>Source</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>