metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Created_Date__c</fullName>
    <formula>FDConnect__Creation_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Created Date</label>
    <type>DateTime</type>
</CustomField>