metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Description__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Description__c</fullName>
    <label>Ticket_Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>