metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Due_Date__c</fullName>
    <formula>FDConnect__Due_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Due Date</label>
    <type>DateTime</type>
</CustomField>