metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ticket_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>