metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Last_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Last_Response_Date__c</fullName>
    <formula>FDConnect__Last_Responded_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Last Response Date</label>
    <type>DateTime</type>
</CustomField>