metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Priority__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Priority__c</fullName>
    <label>Ticket_Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>