metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Source__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Source__c</fullName>
    <formula>CASE( FDConnect__Source__c , 1, &quot;Email&quot;, 2, &quot;Portal&quot;,3,&quot;Phone&quot;,7,&quot;Chat&quot;,8,&quot;Mobihelp&quot;,9,&quot;FeedBack Widget&quot;,&quot;Outbound Email&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Source</label>
    <type>Text</type>
</CustomField>