metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Status__c</fullName>
    <label>Ticket_Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>