metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/fields/FDConnect__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>FDConnect__Ticket_Type__c</fullName>
    <label>Ticket_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>