metadata/force-app/main/default/objects/FDConnect__Fd_Ticket__c/listViews/FDConnect__All.listView-meta.xml
<ListView>
    <fullName>FDConnect__All</fullName>
    <columns>NAME</columns>
    <columns>FDConnect__Contact_Id__c</columns>
    <columns>FDConnect__Ticket_Id__c</columns>
    <columns>FDConnect__Ticket_Priority__c</columns>
    <columns>FDConnect__Ticket_Status__c</columns>
    <columns>FDConnect__Ticket_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>